--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.3",
+    "lint-staged": "^11.0.0",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
