--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,3 @@
 {
-  "*.js": ["eslint --fix", "prettier --write"],
-  "*.tsx": ["eslint --fix", "prettier --write"]
+  "!(*test).{js,ts,tsx}": ["eslint --fix", "prettier --write"]
 }
