--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "@next/bundle-analyzer": "^10.2.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react-hooks": "^5.1.2",
